修改样式前缀

--- a/src/styles/common/config.scss
+++ b/src/styles/common/config.scss
@@ -1,4 +1,4 @@
-$namespace: 'fu' !default;
+$namespace: 'zy' !default;
 $common-separator: '-';
 $element-separator: '__';
 $modifier-separator: '--';
